# autonomy

./: .coverage  .github-workflow.json  .gitignore  .pre-commit-config.yaml  AUTONOMY_MCP_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NEXT_RELEASE_NOTES.md  README.md  pyproject.toml  test_mehul_push.md  test_push.md
.github/workflows/: ci.yml  publish.yml  pypi-publish.yml  release.yml
autonomy/: __init__.py
autonomy_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: API.md  ARCHITECTURE.md  Autonomy_Planning_Agent_PRD.md  CONFIGURATION.md  DEVELOPMENT_SETUP.md  ENTERPRISE.md  INSTALLATION.md  ISSUE_NOTES.md  ISSUE_SIMPLIFICATION.md  OPERATIONS.md  PLAN.md  PLAN_v1.md  PRD.md  README.md  REQUIREMENTS.md  SELF_HOSTING.md  TECH.md  TEST.md  TEST_v1.md  USAGE_GUIDE.md  USAGE_GUIDE_v1.md  USER_GUIDE.md  WORKFLOW.md
docs/archive/: ISSUE_NOTES.md  PRD_v1.md
examples/: agent.yml  autonomy.json  basic_usage.py  board_cache.json
scripts/: SCRIPTS_README.md  bump-version-pr.sh  bump-version.sh  create_issues_from_plan.py  extract_to_repo.sh  generate_docs.py  pre_commit_priority.py  release-notes.sh  test-installation.sh
src/: __init__.py  verify.py
src/api/: server.py  webhooks.py
src/audit/: logger.py  undo.py
src/cli/: main.py
src/core/: agents.py  config.py  platform.py  workflow_manager.py
src/github/: __init__.py  board_manager.py  client.py  device_flow.py  issue_manager.py  token_storage.py
src/metrics/: collector.py  storage.py
src/planning/: langgraph_workflow.py  plan_manager.py  workflow.py
src/slack/: __init__.py  commands.py  notifications.py
src/tasks/: __init__.py  backlog_doctor.py  hierarchy_manager.py  ranking.py  task_manager.py
src/templates/: settings.html
src/tools/: __init__.py  github.py  registry.py
tests/: conftest.py  test_api_server.py  test_audit.py  test_autonomy_core.py  test_autonomy_mcp.py  test_backlog_doctor.py  test_basic_integration.py  test_board_manager.py  test_board_priority.py  test_cli_auth.py  test_cli_commands.py  test_cli_extra_planning.py  test_cli_main_oauth.py  test_cli_planning.py  test_cli_slack.py  test_documentation.py  test_error_handling.py  test_github_client.py  test_github_device_flow.py  test_hierarchy_manager.py  test_installation.py  test_issue_manager_async.py  test_issue_manager_hooks.py  test_langgraph_planning.py  test_metrics.py  test_no_mcp_references.py  test_pat_scopes.py  test_performance.py  test_planning_workflow.py  test_platform_foundation.py  test_ranking_engine.py  test_release_scripts.py  test_secret_vault.py  test_slack.py  test_slack_commands.py  test_slack_notifications.py  test_task_manager.py  test_token_storage.py  test_tool_registry.py  test_webhook.py
tests/e2e/: test_api_undo_workflow.py
tests/integration/: test_webhook_sync.py
tests/unit/: test_github_tools.py
